<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="16dp">

    <!-- Display Time -->
    <TextView
        android:id="@+id/selectedTime"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:text="00 : 00 "
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="46dp" />

    <!-- มีปุ่มกด (Button 2 คะแนน) -->
    <Button
        android:id="@+id/selectTimeBtn"
        android:text="@string/select_time"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#8000FF"
        android:textColor="#FFFFFF"
        android:textSize="26dp" />

        <!-- Set Alarm Button -->
        <Button
        android:id="@+id/setAlarmBtn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/set_alarm"
        android:textSize="26dp"
        android:backgroundTint="#8000FF"
        android:textColor="#FFFFFF"/>

        <!-- Cancel Alarm Button -->
        <Button
        android:id="@+id/cancelAlarmBtn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/cancel_alarm"
        android:textSize="26dp"
        android:backgroundTint="#8000FF"
        android:textColor="#FFFFFF"/>

    <!--แสดงชื่อและรหัสนักศึกษาของตัวเองบนหน้าจอโปรแกรม (3 คะแนน)-->
    <TextView
        android:id="@+id/authorName"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/author"
        android:textColor="#808080"
        android:textSize="15sp" />
    <!-- ปุ่มจบโปรแกรม (Exit Button 1 คะแนน) -->
    <Button
        android:id="@+id/closeAppBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/close_app"
        android:textSize="11sp" />
    <Button
        android:id="@+id/languageSwitchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_switch_btn"
        android:layout_marginTop="16dp"
        android:layout_gravity="center" />


</LinearLayout>
